# diffstat-snapshots

./: CHANGES  COPYING  COPYING.asc  README  aclocal.m4  configure  configure.in  diffstat.1  diffstat.c  makefile.in
package/: diffstat.spec
package/debian/: changelog  control  copyright  rules  watch
testing/: case01.ref  case01p1.ref  case01p9.ref  case02p1.ref  case02p9.ref  case03p1.ref  case04.ref  case04p1.ref  case04p9.ref  case05.ref  case05f0.ref  case05p9.ref  case06.ref  case06p9.ref  case07p1.ref  case07p9.ref  case08p1.ref  case10.ref  case10p1.ref  case10p9.ref  case11f0.ref  case12k.ref  case12p1.ref  case12p9.ref  case13k.ref  case13p9.ref  case14.ref  case14p1.ref  case15.ref  case15p9.ref  case16.pat  case16.ref  case16f0.ref  case16p9.ref  case17p9.ref  case18.ref  case18f0.ref  case19f0.ref  case19k.ref  case20.pat  (+64 more)
