dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.19 2009/09/01 00:06:31 tom Exp $
AC_PREREQ(2.13.20020210)
AC_REVISION($Revision: 1.19 $)
AC_INIT(diffstat.c)
AC_CONFIG_HEADER(config.h:config_h.in)

AC_PROG_CC
AC_PROG_INSTALL

CF_ANSI_CC_REQD
CF_DISABLE_ECHO
CF_PROG_EXT
CF_WITH_INSTALL_PREFIX

with_full_paths=no
CF_PATH_PROG(BZCAT, bzcat)
CF_PATH_PROG(BZIP2, bzip2)
CF_PATH_PROG(COMPRESS, compress, gzip)
CF_PATH_PROG(GZIP, gzip)
CF_PATH_PROG(LZCAT, lzcat)
CF_PATH_PROG(PCAT, pcat)
CF_PATH_PROG(UNCOMPRESS, uncompress.real, uncompress)
CF_PATH_PROG(ZCAT, zcat)

CF_XOPEN_SOURCE
CF_WITH_WARNINGS

AC_CONST
AC_STDC_HEADERS
AC_HAVE_HEADERS(\
malloc.h \
search.h \
string.h \
)
CF_GETOPT_HEADER

AC_TYPE_SIZE_T

AC_CHECK_FUNCS(\
getc_unlocked \
mkdtemp \
popen \
tsearch \
)

CF_DISABLE_LEAKS

###	output makefile and config.h
AC_OUTPUT(makefile,,,cat)
