dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.34 2023/02/05 15:04:06 tom Exp $
dnl
dnl Copyright 1994-2019,2023 Thomas E. Dickey
dnl
AC_PREREQ(2.52.20190901)
AC_REVISION($Revision: 1.34 $)
AC_INIT(diffstat.c)
AC_CONFIG_HEADER(config.h:config_h.in)

AC_CANONICAL_HOST
CF_PROG_CC
AC_PROG_INSTALL
CF_PROG_LINT
CF_MAKE_TAGS

CF_DISABLE_ECHO
CF_WITH_INSTALL_PREFIX

with_full_paths=no
CF_PATH_PROG(BZCAT, bzcat)
CF_PATH_PROG(BZIP2, bzip2)
CF_PATH_PROG(COMPRESS, compress, gzip)
CF_PATH_PROG(GZIP, gzip)
CF_PATH_PROG(LZCAT, lzcat, xz)
CF_PATH_PROG(PCAT, pcat)
CF_PATH_PROG(UNCOMPRESS, uncompress.real, uncompress)
CF_PATH_PROG(XZ, xz, lzcat)
CF_PATH_PROG(ZCAT, zcat)

CF_XOPEN_SOURCE
CF_WITH_WARNINGS

AC_CONST
AC_CHECK_DECL(exit)
AC_HAVE_HEADERS(ioctl.h search.h sys/ioctl.h)

AC_TYPE_SIZE_T

CF_LOCALE

AC_CHECK_FUNCS(\
mkdtemp \
opendir \
strdup \
tsearch \
)

CF_FUNC_LSTAT
CF_FUNC_GETOPT(getopt,\$(srcdir)/porting)
CF_FUNC_POPEN(popen,\$(srcdir)/porting)
CF_FUNC_MBSTOWCWIDTH

CF_STDIO_UNLOCKED(getc_unlocked)

CF_TERMIOS

CF_WITH_MAN2HTML
CF_DISABLE_LEAKS

###	output makefile and config.h
AC_OUTPUT(makefile,,,cat)
CF_MAKE_DOCS(diffstat,1)
