dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.35 2024/11/11 11:57:26 tom Exp $
dnl ---------------------------------------------------------------------------
dnl Copyright 1994-2023,2024 Thomas E. Dickey
dnl
dnl Permission is hereby granted, free of charge, to any person obtaining a
dnl copy of this software and associated documentation files (the "Software"),
dnl to deal in the Software without restriction, including without limitation
dnl the rights to use, copy, modify, merge, publish, distribute, sublicense,
dnl and/or sell copies of the Software, and to permit persons to whom the
dnl Software is furnished to do so, subject to the following conditions:
dnl
dnl The above copyright notice and this permission notice shall be included in
dnl all copies or substantial portions of the Software.
dnl
dnl THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
dnl IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
dnl FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
dnl THE ABOVE COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
dnl LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
dnl FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
dnl DEALINGS IN THE SOFTWARE.
dnl
dnl Except as contained in this notice, the name(s) of the above copyright
dnl holders shall not be used in advertising or otherwise to promote the sale,
dnl use or other dealings in this Software without prior written
dnl authorization.
dnl ---------------------------------------------------------------------------
AC_PREREQ(2.52.20190901)
AC_REVISION($Revision: 1.35 $)
AC_INIT(diffstat.c)
AC_CONFIG_HEADER(config.h:config_h.in)
CF_CHECK_CACHE

CF_PROG_CC
AC_PROG_INSTALL
CF_PROG_LINT
CF_MAKE_TAGS

CF_DISABLE_ECHO
CF_WITH_INSTALL_PREFIX

with_full_paths=no
CF_PATH_PROG(BZCAT, bzcat)
CF_PATH_PROG(BZIP2, bzip2)
CF_PATH_PROG(COMPRESS, compress, gzip)
CF_PATH_PROG(GZIP, gzip)
CF_PATH_PROG(LZCAT, lzcat, xz)
CF_PATH_PROG(PCAT, pcat)
CF_PATH_PROG(UNCOMPRESS, uncompress.real, uncompress)
CF_PATH_PROG(XZ, xz, lzcat)
CF_PATH_PROG(ZCAT, zcat)
CF_PATH_PROG(ZSTD, zstd)

CF_XOPEN_SOURCE
CF_WITH_WARNINGS

AC_CONST
AC_CHECK_DECL(exit)
AC_HAVE_HEADERS(ioctl.h search.h sys/ioctl.h)

AC_TYPE_SIZE_T

CF_LOCALE

AC_CHECK_FUNCS(\
mkdtemp \
opendir \
strdup \
tsearch \
)

CF_FUNC_LSTAT
CF_FUNC_GETOPT(getopt,\$(srcdir)/porting)
CF_FUNC_POPEN(popen,\$(srcdir)/porting)
CF_FUNC_MBSTOWCWIDTH

CF_STDIO_UNLOCKED(getc_unlocked)

CF_TERMIOS

CF_WITH_MAN2HTML
CF_DISABLE_LEAKS

###	output makefile and config.h
AC_OUTPUT(makefile,,,cat)
CF_MAKE_DOCS(diffstat,1)
